--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
+  background-color: #f6f8fa;
 }
 
 header {
@@ -40,6 +41,10 @@ i:hover {
   color: #6c63ff;
 }
 
+ul li i {
+  margin: .5rem 1rem;
+}
+
 h1,
 h2 {
   margin: .75rem 0;
@@ -60,6 +65,11 @@ footer>div {
 
 input {
   padding: .25rem .5rem;
+}
+
+.skills-ul {
+  text-align: center;
+  list-style-type: none;
 }
 
 .big-margin {
@@ -93,6 +103,10 @@ input {
   justify-content: space-between
 }
 
+.flex-evenly {
+  justify-content: space-evenly;
+}
+
 .flex-column {
   flex-direction: column;
 }
@@ -114,6 +128,11 @@ input {
   width: 100%;
 }
 
+.mb-2 {
+  margin: 2rem;
+}
+
+
 .profile {
   width: 20rem;
   height: 20rem;
@@ -130,9 +149,9 @@ input {
   margin: 0rem 0 2rem 0;
 }
 
-/*.projects-width {*/
-/*  width:300px;*/
-/*}*/
+.skills-section-margin {
+  margin: 10rem 0 2rem 0;
+}
 
 
 .card {
@@ -142,6 +161,7 @@ input {
   border: .01rem solid #d2d2d2;
   padding: 1rem;
   transition: .15s ease-in;
+  background-color: #fff;
 }
 
 .card:hover {
@@ -168,6 +188,7 @@ input {
 
 .project-img-width {
   width: 300px;
+  margin-left: 2rem;
 }
 
 .h-f-s {
@@ -177,6 +198,7 @@ input {
 
 .form-img {
   width: 25rem;
+  margin-right: 1rem;
 }
 
 input {
@@ -191,12 +213,74 @@ input {
   font-weight: bold;
 }
 
-@media(max-width:500px) {
+.skewed-card {
+  width: 25rem;
+  width: 50rem;
+  display: flex;
+  background-color: #fff;
+  margin: 2rem 0;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+  height: 25rem;
+  transition: .15s ease-in;
+}
 
-  .profile {
-    width: 25rem;
+.skewed-card:hover {
+  box-shadow: 0 0 10px #6c63ff
+}
+
+.card-text {
+  padding: 1.5rem;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
+.card-img {
+  width: 60%;
+  height: 25rem;
+  position: relative;
+  overflow: hidden;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.card-img::before {
+  content: '';
+  position: absolute;
+  left: -4.5rem;
+  top: 50%;
+  transform: translateY(-50%) rotate(18deg);
+  background-color: #fff;
+  width: 40%;
+  height: 140%;
+  box-shadow: 0 0 25px rgba(0, 0, 0, .7);
+  transition: .15s ease-in;
+}
+
+.skewed-card:hover .card-img::before {
+  box-shadow: 0 0 25px #6c63ff
+}
+
+img {
+  width: 140%;
+}
+
+@media(max-width:720px) {
+  .form-section {
+    flex-direction: column;
+    align-items: center;
   }
 
+  .form-img {
+    width: 75%
+  }
+
+}
+
+@media(max-width:500px) {
   .lead {
     font-size: 1.25rem
   }
@@ -204,15 +288,6 @@ input {
   .project-flex {
     flex-direction: column;
   }
-
-  .form-section {
-    flex-direction: column;
-  }
-
-  .form-img {
-    width: 100%
-  }
-
 }
 
 @media (min-width:501px) {
