--- a/style.css
+++ b/style.css
@@ -219,7 +219,6 @@ input {
 }
 
 .skewed-card {
-  width: 25rem;
   width: 50rem;
   display: flex;
   background-color: #fff;
@@ -262,7 +261,7 @@ input {
   width: 40%;
   height: 140%;
   box-shadow: 0 0 25px rgba(0, 0, 0, .7);
-  transition: .15s ease-in;
+  transition: box-shadow .15s ease-in;
 }
 
 .skewed-card:hover .card-img::before {
@@ -273,7 +272,31 @@ img {
   width: 140%;
 }
 
-@media(max-width:720px) {
+@media(max-width:825px) {
+  .skewed-card {
+    display: block;
+    max-width: 90vw;
+    height: 100%;
+  }
+
+  .card-img,
+  .card-text {
+    width: 100%;
+  }
+
+  img {
+    width: 160%;
+  }
+
+  .skewed-card .card-img::before {
+    content: '';
+    width: 120%;
+    height: 40%;
+    top: -5em;
+    left: 50%;
+    transform: translateX(-50%) rotate(10deg);
+  }
+
   .form-section {
     flex-direction: column;
     align-items: center;
