working on navbar

--- a/style.css
+++ b/style.css
@@ -11,12 +11,20 @@ body {
   background-color: #f6f8fa;
 }
 
+header {
+  background: radial-gradient(circle at 10% 20%, rgb(126, 70, 195) 0%, rgb(156, 236, 247) 90%);
+}
+
 header,
-section {
+section:first-of-type {
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0 15px;
+}
+
+header div {
   padding: 0 15px;
 }
 
@@ -30,23 +38,42 @@ textarea {
   font-size: .81rem;
 }
 
+input,
+textarea {
+  border: 1px solid #6c63ff;
+}
+
 header {
   padding: 5rem 0;
 }
 
 nav {
+  position: fixed;
+  padding: 1.5rem 2rem;
   width: 100%;
   display: flex;
-  flex: 0;
+  background-color: #fff;
+  z-index: 5;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  margin: 0 5px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  font-weight: 200;
 }
 
 main {
   box-shadow: 0, 0, 5px #333;
   line-height: 1.5;
-}
-
-a i {
-  margin: 0 10px;
 }
 
 a {
@@ -56,11 +83,15 @@ a {
   text-underline-offset: 2px
 }
 
-.bg-dark a:hover,
-a:hover {
+a:nth-child(odd):hover {
   color: #6c63ff;
+  text-shadow: 0 0 5px #fff;
 }
 
+a:nth-child(even):hover {
+  color: #9cecf7;
+  text-shadow: 0 0 5px #fff;
+}
 
 i {
   transition: .125s ease-in;
@@ -75,6 +106,7 @@ footer a {
 }
 
 a i {
+  margin: 0 10px;
   font-size: 2.5rem;
 }
 
@@ -101,7 +133,6 @@ footer,
 footer>div {
   height: 5rem;
 }
-
 
 
 input,
@@ -167,6 +198,10 @@ textarea {
   flex-direction: column;
 }
 
+.flex-end {
+  justify-content: flex-end;
+}
+
 .flex-gap {
   gap: 50px;
 
@@ -188,6 +223,10 @@ textarea {
   margin: 2rem;
 }
 
+.profile-outer {
+  margin-bottom: 5rem;
+}
+
 .profile {
   width: 20rem;
   height: 20rem;
@@ -206,28 +245,11 @@ textarea {
 .skills-section-spacing {
   margin-top: 10rem;
   padding: 10rem 5rem;
-}
 
-.skills-section-spacing div:first-child {
-  margin-bottom: 5rem;
 }
 
 .skills-img-width {
   width: 175px;
-}
-
-.card {
-  width: 16rem;
-  height: 18rem;
-  border-radius: 2px;
-  border: .01rem solid #d2d2d2;
-  padding: 1rem;
-  transition: .15s ease-in;
-  background-color: #fff;
-}
-
-.card:hover {
-  box-shadow: 0 0 5px #6c63ff;
 }
 
 .button {
@@ -263,11 +285,6 @@ textarea {
   margin-right: 1rem;
 }
 
-input,
-textarea {
-  border: 1px solid #6c63ff;
-}
-
 .mw {
   max-width: 500px;
 }
@@ -287,8 +304,12 @@ textarea {
   transition: .15s ease-in;
 }
 
-.skewed-card:hover {
-  box-shadow: 0 0 10px #6c63ff
+.skewed-card:nth-child(odd):hover {
+  box-shadow: 0 0 5px #6c63ff;
+}
+
+.skewed-card:nth-child(even):hover {
+  box-shadow: 0 0 5px #9cecf7;
 }
 
 .card-text {
@@ -322,8 +343,12 @@ textarea {
   transition: box-shadow .15s ease-in;
 }
 
-.skewed-card:hover .card-img::before {
+.skewed-card:nth-child(odd) .card-img::before {
   box-shadow: 0 0 25px #6c63ff
+}
+
+.skewed-card:nth-child(even) .card-img::before {
+  box-shadow: 0 0 25px #9cecf7
 }
 
 img {
@@ -360,14 +385,22 @@ img {
   }
 }
 
+@media(max-width:720px) {
+  main section:last-of-type {
+    flex-direction: column;
+  }
+}
+
 @media(max-width:500px) {
   .lead {
-    font-size: 1.25rem
+    font-size: 2.25rem
   }
 
   .project-flex {
     flex-direction: column;
   }
+
+
 }
 
 @media (min-width:501px) {
