--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 :root {
   --bgc: #f6f8fa;
   --purple: #6c63ff;
-  --blue: #9cecf7;
+  --blue: #177ad0;
 }
 
 html {
@@ -198,6 +198,20 @@ footer>div {
 input,
 textarea {
   padding: .25rem .5rem;
+}
+
+.menu-btn {
+  cursor: pointer;
+  /* display: none; */
+  /* position: absolute; */
+}
+
+/* < !-- ! Font Awesome Pro 6.3.0 by @fontawesome - https: //fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --> */
+.menu-btn:after {
+  content: url("data:image/svg+xml; utf8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'><path d='M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z' /></svg>");
+  display: flex;
+  width: 25px;
+  height: 25px;
 }
 
 .initials {
@@ -486,6 +500,32 @@ img {
 
   header div {
     transform: scale(1);
+  }
+
+  nav {
+    height: 67.2px;
+    overflow-y: hidden;
+    transition: height .5s ease-in;
+  }
+
+  nav ul {
+    overflow-y: hidden;
+    flex-direction: column;
+    margin-top: 80px;
+    opacity: 0;
+    transition: opacity .5s ease-in;
+  }
+
+  nav.active {
+    height: 304px;
+  }
+
+  nav.active ul {
+    opacity: 1;
+  }
+
+  .menu-btn {
+    margin-top: 13.25px;
   }
 }
 
