--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ textarea {
 
 .menu-btn {
   cursor: pointer;
-  /* display: none; */
+  display: none;
   /* position: absolute; */
 }
 
@@ -526,6 +526,7 @@ img {
 
   .menu-btn {
     margin-top: 13.25px;
+    display: block;
   }
 }
 
