--- a/style.css
+++ b/style.css
@@ -513,13 +513,14 @@ img {
     overflow-y: hidden;
     flex-direction: column;
     margin-top: 80px;
+    margin-bottom: 40px;
     opacity: 0;
     transition: opacity .5s ease-in;
     height: 208px;
   }
 
   nav.active {
-    height: 304px;
+    height: 344px;
   }
 
   nav.active ul {
