--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   background-color: var(--bgc);
+  -webkit-appearance: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
